# humsh

./: Cargo.toml  README.md  TODOS.md  flake.nix
.humsh/: commands.toml
src/: command_line.rs  config.rs  data.rs  direnv.rs  draw.rs  ipc.rs  main.rs  multi_term.rs  ui.rs  util.rs
src/data/: cp.rs  jj.rs  shell_context.rs
src/ui/: context.rs  input.rs  style.rs
