[package]
name = "humsh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
crossterm = { version = "0.26.1", features = ["event-stream"] }
csv = "1.2.2"
dirs = "5.0.1"
flume = "0.10.14"
once_cell = "1.18.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.104"
tempfile = "3.7.0"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
toml = "0.7.6"
